--- a/CubismApps/Makefile.config
+++ b/CubismApps/Makefile.config
@@ -97,7 +97,7 @@ endif
 ###############################################################################
 
 CPPFLAGS += -D_ALIGNBYTES_=$(align) -D_BLOCKSIZE_=$(bs) -D_BLOCKSIZEX_=$(bs) -D_BLOCKSIZEY_=$(bs) -D_BLOCKSIZEZ_=$(bs)
-CPPFLAGS += -I../../Cubism/source/ -I../Compressor/source/
+CPPFLAGS += -I../Compressor/Cubism/source/ -I../Compressor/source/
 
 CPPFLAGS += -I$(hdf-inc) -D_USE_HDF_
 LIBS += -L$(hdf-lib) -lhdf5
