--- a/Makefile.config
+++ b/Makefile.config
@@ -5,56 +5,45 @@ cc ?= mpicc
 LD ?= mpic++
 
 ###############################################################################
-hdf-inc = .
-hdf-lib = .
+hdf-inc ?= .
+hdf-lib ?= .
 
-hdf-inc = /opt/hdf5_mpich/include
-hdf-lib = /opt/hdf5_mpich/lib
+#hdf-inc = /opt/hdf5_mpich/include
+#hdf-lib = /opt/hdf5_mpich/lib
+
 ###############################################################################
+# User options
 
-# core
+# general software configuration options
 bs ?= 32
 ap ?= float
 omp ?= 1
 align ?= 16
-
 needs_lz ?= 1
 
-#compression stage-1 (floating point)
+# options for the first compression stage (floating point)
 wavz ?= 0
 fpzip ?= 0
 zfp ?= 0
 sz ?= 0
 
-#compression stage-2 (encoding)
+# options for the second compression stage (encoding)
 zlib ?= 0
 lz4 ?= 0
 
-# bit zeroing and byte shuffling before encoding
-
-zerobits ?= 0
+# options (bit zeroing, byte shuffling) for the wavelet coefficients, applied between the first and second stage
+zerobits ?= 0	# for wavz + zerobits
 shuffle3 ?= 0	# for wavz + shuffle3
 
 ###############################################################################
-
-ifeq "$(sz)" "1"
-needs_lz = 0
-endif
-
-###############################################################################
-CPPFLAGS+= $(extra)
+# Compilation and linking options
 
 ifeq "$(ap)" "float"
         CPPFLAGS += -D_FLOAT_PRECISION_
 endif
 
 ifeq "$(config)" "release"
-	ifeq "$(CC)" "icc"
-		OPTFLAGS+= -DNDEBUG -O3 -xHOST  -ip -ansi-alias -fno-fnalias -inline-level=1
-	else
-		OPTFLAGS += -O3 -fno-expensive-optimizations -falign-functions=16 -DNDEBUG
-		OPTFLAGS += -DNDEBUG
-	endif
+	OPTFLAGS+= -DNDEBUG -O3 
 else
 	CPPFLAGS += -g
 endif
@@ -69,13 +58,6 @@ ifeq "$(omp)" "1"
 	endif
 endif
 
-###############################################################################
-# Testing machines
-
-ifneq "$(findstring falcon,$(shell hostname))" ""
-endif
-###############################################################################
-
 CPPFLAGS += -D_ALIGNBYTES_=$(align) -D_BLOCKSIZE_=$(bs) -D_BLOCKSIZEX_=$(bs) -D_BLOCKSIZEY_=$(bs) -D_BLOCKSIZEZ_=$(bs)
 CPPFLAGS += -I../Compressor/Cubism/source/ -I../Compressor/source/
 
@@ -83,15 +65,14 @@ CPPFLAGS += -I$(hdf-inc) -D_USE_HDF_
 LIBS += -L$(hdf-lib) -lhdf5
 LIBS += -lm
 
-ifeq "$(needs_lz)" "1"
-LIBS += -lz
-endif
-
-###############################################################################
-# Compression Options
-
 # ThirdParty libraries
 LIBS += -L../ThirdParty/build/lib
+
+
+CPPFLAGS += $(extra)
+
+###############################################################################
+# Flags related to the compression options
 
 ifeq "$(wavz)" "1"
        CPPFLAGS += -D_USE_WAVZ_
@@ -110,10 +91,32 @@ endif
 ifeq "$(sz)" "1"
 	CPPFLAGS += -D_USE_SZ_  -I../ThirdParty/build/include
 	LIBS += -lSZ  -lzlib
+	needs_lz = 0
 endif
 
-ifeq "$(shuffle)" "1"
-       CPPFLAGS += -D_USE_SHUFFLE_
+
+###############################################################################
+# Flags related to the encoding options
+
+ifeq "$(zlib)" "1"
+       CPPFLAGS += -D_USE_ZLIB_
+       LIBS +=  -lz
+endif
+
+ifeq "$(lz4)" "1"
+       CPPFLAGS += -D_USE_LZ4_  -I../ThirdParty/build/include/lz4
+       LIBS += -llz4
+endif
+
+ifeq "$(needs_lz)" "1"
+	LIBS += -lz
+endif
+
+###############################################################################
+# Flags related to the extensions to the wavelet-based compression (wavz)
+
+ifeq "$(shuffle3)" "1"
+       CPPFLAGS += -D_USE_SHUFFLE3_
 endif
 
 ifeq "$(zerobits)" "4"
@@ -131,23 +134,4 @@ endif
 ifeq "$(zerobits)" "16"
        CPPFLAGS += -D_USE_ZEROBITS_
        CPPFLAGS += -D_ZEROBITS_=16
-endif
-
-###############################################################################
-# Encoding Options
-
-ifeq "$(zlib)" "1"
-       CPPFLAGS += -D_USE_ZLIB_
-       LIBS +=  -lz
-endif
-
-ifeq "$(lz4)" "1"
-       CPPFLAGS += -D_USE_LZ4_  -I../ThirdParty/build/include/lz4
-       LIBS += -llz4
-endif
-
-# Extensions to the Wavelet-based Compression (wavz)
-
-ifeq "$(shuffle3)" "1"
-       CPPFLAGS += -D_USE_SHUFFLE3_
 endif
