Testing the code with sequential hdf5

--- a/Tools/Makefile
+++ b/Tools/Makefile
@@ -5,8 +5,8 @@ SHELL := /bin/bash
 
 MPICC ?= mpic++
 blocksize ?= 32
-hdf-incdir ?= /opt/hdf5_mpich/include
-hdf-libdir ?= /opt/hdf5_mpich/lib
+hdf-incdir ?= . #/opt/hdf5_mpich/include
+hdf-libdir ?= . #/opt/hdf5_mpich/lib
 
 config ?=release
 dir ?= default
