added support for clang on Mac (w/o OpenMP by default)

--- a/Makefile.config
+++ b/Makefile.config
@@ -1,8 +1,9 @@
 SHELL := /bin/bash
 
-CC ?= mpic++
-cc ?= mpicc
-LD ?= mpic++
+MPICC ?= mpic++
+mpicc ?= mpicc
+showme   = $(shell $(MPICC) --showme)
+compiler = $(firstword $(showme))
 
 ###############################################################################
 hdf-inc ?= .
@@ -40,14 +41,16 @@ ifeq "$(ap)" "float"
 endif
 
 ifeq "$(config)" "release"
-	OPTFLAGS+= -DNDEBUG -O3 
+	OPTFLAGS+= -DNDEBUG -O3
 else
 	CPPFLAGS += -g
 endif
 
 ifeq "$(omp)" "1"
-	CPPFLAGS += -fopenmp
-	OPTFLAGS += -fopenmp
+	ifneq "$(compiler)" "clang++"
+		CPPFLAGS += -fopenmp
+		OPTFLAGS += -fopenmp
+	endif
 endif
 
 CPPFLAGS += -D_ALIGNBYTES_=$(align) -D_BLOCKSIZE_=$(bs) -D_BLOCKSIZEX_=$(bs) -D_BLOCKSIZEY_=$(bs) -D_BLOCKSIZEZ_=$(bs)
