use -show instead of -showme

--- a/Makefile.config
+++ b/Makefile.config
@@ -2,8 +2,8 @@ SHELL := /bin/bash
 
 MPICC ?= mpic++
 mpicc ?= mpicc
-showme   = $(shell $(MPICC) --showme)
-compiler = $(firstword $(showme))
+mpi_info = $(shell $(MPICC) -show)
+compiler = $(firstword $(mpi_info))
 
 ###############################################################################
 hdf-inc ?= .
