handle absolute paths /a/b/c/g++ -> g++

--- a/Makefile.config
+++ b/Makefile.config
@@ -3,7 +3,8 @@ SHELL := /bin/bash
 MPICC ?= mpic++
 mpicc ?= mpicc
 mpi_info = $(shell $(MPICC) -show)
-compiler = $(firstword $(mpi_info))
+compiler = $(notdir $(firstword $(mpi_info)))
+$(info Found [$(compiler)])
 
 ###############################################################################
 hdf-inc ?= .
