Include zlib in Thirdparty

--- a/Makefile.config
+++ b/Makefile.config
@@ -62,6 +62,7 @@ LIBS += -L$(hdf-lib) -lhdf5
 LIBS += -lm
 
 # ThirdParty libraries
+CPPFLAGS += -I../ThirdParty/build/include
 LIBS += -L../ThirdParty/build/lib
 
 
@@ -95,8 +96,8 @@ endif
 # Flags related to the encoding options
 
 ifeq "$(zlib)" "1"
-       CPPFLAGS += -D_USE_ZLIB_
-       LIBS +=  -lz
+	CPPFLAGS += -D_USE_ZLIB_
+	LIBS += -lz
 endif
 
 ifeq "$(lz4)" "1"
