Removed align option

--- a/Makefile.config
+++ b/Makefile.config
@@ -18,7 +18,6 @@ hdf-libraries ?= -lhdf5
 bs ?= 32
 ap ?= float
 omp ?= 1
-align ?= 16
 needs_lz ?= 1
 
 # options for the first compression stage (floating point)
@@ -55,7 +54,7 @@ ifeq "$(omp)" "1"
 	endif
 endif
 
-CPPFLAGS += -D_ALIGNBYTES_=$(align) -D_BLOCKSIZE_=$(bs) -D_BLOCKSIZEX_=$(bs) -D_BLOCKSIZEY_=$(bs) -D_BLOCKSIZEZ_=$(bs)
+CPPFLAGS += -D_BLOCKSIZE_=$(bs) -D_BLOCKSIZEX_=$(bs) -D_BLOCKSIZEY_=$(bs) -D_BLOCKSIZEZ_=$(bs)
 CPPFLAGS += -I../Compressor/Cubism/source/ -I../Compressor/source/
 
 CPPFLAGS += -I$(hdf-inc) -D_USE_HDF_
