Moved user options to CubismZ/Makefile
1. Renamed CPPFLAGS -> CUBISMZFLAGS (clash with ThirdParty)
2. Removed OPTFLAGS -> not needed
3. Makefile.config is only loaded in CubismZ/Makefile, everything is then exported to sub-make rules
4. added tools-custom rule to build custom configurations from CubismZ/Makefile

--- a/Makefile.config
+++ b/Makefile.config
@@ -1,93 +1,62 @@
 SHELL := /bin/bash
 
-MPICC ?= mpic++
-mpicc ?= mpicc
 mpi_info = $(shell $(MPICC) -show)
 compiler = $(notdir $(firstword $(mpi_info)))
 $(info Found [$(compiler)])
 
 ###############################################################################
-hdf-inc ?= .
-hdf-lib ?= .
-hdf-libraries ?= -lhdf5
-
-###############################################################################
-# User options
-
-# general software configuration options
-bs ?= 32
-ap ?= float
-omp ?= 1
-needs_lz ?= 1
-
-# options for the first compression stage (floating point)
-wavz ?= 0
-fpzip ?= 0
-zfp ?= 0
-sz ?= 0
-
-# options for the second compression stage (encoding)
-zlib ?= 0
-lz4 ?= 0
-
-# options (bit zeroing, byte shuffling) for the wavelet coefficients, applied between the first and second stage
-zerobits ?= 0	# for wavz + zerobits
-shuffle3 ?= 0	# for wavz + shuffle3
-
-###############################################################################
 # Compilation and linking options
 
 ifeq "$(ap)" "float"
-        CPPFLAGS += -D_FLOAT_PRECISION_
+        CUBISMZFLAGS += -D_FLOAT_PRECISION_
 endif
 
 ifeq "$(config)" "release"
-	OPTFLAGS+= -DNDEBUG -O3
+	CUBISMZFLAGS += -DNDEBUG -O3
 else
-	CPPFLAGS += -g
+	CUBISMZFLAGS += -g
 endif
 
 ifeq "$(omp)" "1"
 	ifneq "$(compiler)" "clang++"
-		CPPFLAGS += -fopenmp
-		OPTFLAGS += -fopenmp
+		CUBISMZFLAGS += -fopenmp
 	endif
 endif
 
-CPPFLAGS += -D_BLOCKSIZE_=$(bs) -D_BLOCKSIZEX_=$(bs) -D_BLOCKSIZEY_=$(bs) -D_BLOCKSIZEZ_=$(bs)
-CPPFLAGS += -I../Compressor/Cubism/source/ -I../Compressor/source/
+CUBISMZFLAGS += -D_BLOCKSIZE_=$(bs) -D_BLOCKSIZEX_=$(bs) -D_BLOCKSIZEY_=$(bs) -D_BLOCKSIZEZ_=$(bs)
+CUBISMZFLAGS += -I../Compressor/Cubism/source/ -I../Compressor/source/
 
-CPPFLAGS += -I$(hdf-inc) -D_USE_HDF_
-LIBS += -L$(hdf-lib) $(hdf-libraries)
-LIBS += -lm
+CUBISMZFLAGS += -I$(hdf-inc) -D_USE_HDF_
+CUBISMZLIBS += -L$(hdf-lib) $(hdf-libraries)
+CUBISMZLIBS += -lm
 
 # ThirdParty libraries
-CPPFLAGS += -I../ThirdParty/build/include
-LIBS += -L../ThirdParty/build/lib
+CUBISMZFLAGS += -I../ThirdParty/build/include
+CUBISMZLIBS += -L../ThirdParty/build/lib
 
 
-CPPFLAGS += $(extra)
+CUBISMZFLAGS += $(extra)
 
 ###############################################################################
 # Flags related to the compression options
 
 ifeq "$(wavz)" "1"
-       CPPFLAGS += -D_USE_WAVZ_
+       CUBISMZFLAGS += -D_USE_WAVZ_
 endif
 
 ifeq "$(fpzip)" "1"
-	CPPFLAGS += -D_USE_FPZIP_  -I../ThirdParty/build/include/fpzip
-	LIBS += -lfpzip
+	CUBISMZFLAGS += -D_USE_FPZIP_  -I../ThirdParty/build/include/fpzip
+	CUBISMZLIBS += -lfpzip
 endif
 
 ifeq "$(zfp)" "1"
-	CPPFLAGS += -D_USE_ZFP_  -I../ThirdParty/build/include/zfp
-	LIBS += -lzfp
+	CUBISMZFLAGS += -D_USE_ZFP_  -I../ThirdParty/build/include/zfp
+	CUBISMZLIBS += -lzfp
 endif
 
 ifeq "$(sz)" "1"
-	CPPFLAGS += -D_USE_SZ_  -I../ThirdParty/build/include
-	LIBS += -lSZ  -lzlib
+	CUBISMZFLAGS += -D_USE_SZ_  -I../ThirdParty/build/include
+	CUBISMZLIBS += -lSZ  -lzlib
 	needs_lz = 0
 endif
 
@@ -96,39 +65,39 @@ endif
 # Flags related to the encoding options
 
 ifeq "$(zlib)" "1"
-	CPPFLAGS += -D_USE_ZLIB_
-	LIBS += -lz
+	CUBISMZFLAGS += -D_USE_ZLIB_
+	CUBISMZLIBS += -lz
 endif
 
 ifeq "$(lz4)" "1"
-       CPPFLAGS += -D_USE_LZ4_  -I../ThirdParty/build/include/lz4
-       LIBS += -llz4
+       CUBISMZFLAGS += -D_USE_LZ4_  -I../ThirdParty/build/include/lz4
+       CUBISMZLIBS += -llz4
 endif
 
 ifeq "$(needs_lz)" "1"
-	LIBS += -lz
+	CUBISMZLIBS += -lz
 endif
 
 ###############################################################################
 # Flags related to the extensions to the wavelet-based compression (wavz)
 
 ifeq "$(shuffle3)" "1"
-       CPPFLAGS += -D_USE_SHUFFLE3_
+       CUBISMZFLAGS += -D_USE_SHUFFLE3_
 endif
 
 ifeq "$(zerobits)" "4"
-       CPPFLAGS += -D_USE_ZEROBITS_
-       CPPFLAGS += -D_ZEROBITS_=4
+       CUBISMZFLAGS += -D_USE_ZEROBITS_
+       CUBISMZFLAGS += -D_ZEROBITS_=4
 endif
 ifeq "$(zerobits)" "8"
-       CPPFLAGS += -D_USE_ZEROBITS_
-       CPPFLAGS += -D_ZEROBITS_=8
+       CUBISMZFLAGS += -D_USE_ZEROBITS_
+       CUBISMZFLAGS += -D_ZEROBITS_=8
 endif
 ifeq "$(zerobits)" "12"
-       CPPFLAGS += -D_USE_ZEROBITS_
-       CPPFLAGS += -D_ZEROBITS_=12
+       CUBISMZFLAGS += -D_USE_ZEROBITS_
+       CUBISMZFLAGS += -D_ZEROBITS_=12
 endif
 ifeq "$(zerobits)" "16"
-       CPPFLAGS += -D_USE_ZEROBITS_
-       CPPFLAGS += -D_ZEROBITS_=16
+       CUBISMZFLAGS += -D_USE_ZEROBITS_
+       CUBISMZFLAGS += -D_ZEROBITS_=16
 endif
