moved compressor options into Tools/Makefile
Updated cselab_ref_run_all.txt files also

--- a/Makefile.config
+++ b/Makefile.config
@@ -38,66 +38,24 @@ CUBISMZLIBS += -L../ThirdParty/build/lib
 CUBISMZFLAGS += $(extra)
 
 ###############################################################################
-# Flags related to the compression options
+# Main rules
+all: tools
 
-ifeq "$(wavz)" "1"
-       CUBISMZFLAGS += -D_USE_WAVZ_
-endif
+tools: thirdparty-libs tools-only
 
-ifeq "$(fpzip)" "1"
-	CUBISMZFLAGS += -D_USE_FPZIP_  -I../ThirdParty/build/include/fpzip
-	CUBISMZLIBS += -lfpzip
-endif
+tools-only:
+	$(MAKE) -C Tools/ install dir=default
+	$(MAKE) -C Tools/ install dir=wavz_zlib wavz=1 zlib=1
+	$(MAKE) -C Tools/ install dir=fpzip fpzip=1
+	$(MAKE) -C Tools/ install dir=zfp zfp=1
+	$(MAKE) -C Tools/ install dir=sz sz=1
 
-ifeq "$(zfp)" "1"
-	CUBISMZFLAGS += -D_USE_ZFP_  -I../ThirdParty/build/include/zfp
-	CUBISMZLIBS += -lzfp
-endif
+tools-custom:
+	$(MAKE) -C Tools/ install
 
-ifeq "$(sz)" "1"
-	CUBISMZFLAGS += -D_USE_SZ_  -I../ThirdParty/build/include
-	CUBISMZLIBS += -lSZ  -lzlib
-	needs_lz = 0
-endif
+thirdparty-libs:
+	$(MAKE) -C ThirdParty/
 
-
-###############################################################################
-# Flags related to the encoding options
-
-ifeq "$(zlib)" "1"
-	CUBISMZFLAGS += -D_USE_ZLIB_
-	CUBISMZLIBS += -lz
-endif
-
-ifeq "$(lz4)" "1"
-       CUBISMZFLAGS += -D_USE_LZ4_  -I../ThirdParty/build/include/lz4
-       CUBISMZLIBS += -llz4
-endif
-
-ifeq "$(needs_lz)" "1"
-	CUBISMZLIBS += -lz
-endif
-
-###############################################################################
-# Flags related to the extensions to the wavelet-based compression (wavz)
-
-ifeq "$(shuffle3)" "1"
-       CUBISMZFLAGS += -D_USE_SHUFFLE3_
-endif
-
-ifeq "$(zerobits)" "4"
-       CUBISMZFLAGS += -D_USE_ZEROBITS_
-       CUBISMZFLAGS += -D_ZEROBITS_=4
-endif
-ifeq "$(zerobits)" "8"
-       CUBISMZFLAGS += -D_USE_ZEROBITS_
-       CUBISMZFLAGS += -D_ZEROBITS_=8
-endif
-ifeq "$(zerobits)" "12"
-       CUBISMZFLAGS += -D_USE_ZEROBITS_
-       CUBISMZFLAGS += -D_ZEROBITS_=12
-endif
-ifeq "$(zerobits)" "16"
-       CUBISMZFLAGS += -D_USE_ZEROBITS_
-       CUBISMZFLAGS += -D_ZEROBITS_=16
-endif
+clean:
+	$(MAKE) -C Tools/ clean
+	$(MAKE) -C ThirdParty/ clean
