changed hdf-lib|inc|libraries to hdf-libdir|incdir|libs

--- a/Makefile.config
+++ b/Makefile.config
@@ -1,6 +1,6 @@
 SHELL := /bin/bash
 
-mpi_info = $(shell $(MPICC) -show)
+mpi_info = $(shell $(MPICXX) -show)
 compiler = $(notdir $(firstword $(mpi_info)))
 $(info Found [$(compiler)])
 
@@ -26,8 +26,8 @@ endif
 CUBISMZFLAGS += -D_BLOCKSIZE_=$(bs) -D_BLOCKSIZEX_=$(bs) -D_BLOCKSIZEY_=$(bs) -D_BLOCKSIZEZ_=$(bs)
 CUBISMZFLAGS += -I../Compressor/Cubism/source/ -I../Compressor/source/
 
-CUBISMZFLAGS += -I$(hdf-inc) -D_USE_HDF_
-CUBISMZLIBS += -L$(hdf-lib) $(hdf-libraries)
+CUBISMZFLAGS += -I$(hdf-incdir) -D_USE_HDF_
+CUBISMZLIBS += -L$(hdf-libdir) $(hdf-libs)
 CUBISMZLIBS += -lm
 
 # ThirdParty libraries
