Double precision etc

--- a/Makefile.config
+++ b/Makefile.config
@@ -7,7 +7,7 @@ $(info Found [$(compiler)])
 ###############################################################################
 # Compilation and linking options
 
-ifeq "$(ap)" "float"
+ifeq "$(precision)" "float"
         CUBISMZFLAGS += -D_FLOAT_PRECISION_
 endif
 
@@ -23,7 +23,7 @@ ifeq "$(omp)" "1"
 	endif
 endif
 
-CUBISMZFLAGS += -D_BLOCKSIZE_=$(bs) -D_BLOCKSIZEX_=$(bs) -D_BLOCKSIZEY_=$(bs) -D_BLOCKSIZEZ_=$(bs)
+CUBISMZFLAGS += -D_BLOCKSIZE_=$(blocksize) -D_BLOCKSIZEX_=$(blocksize) -D_BLOCKSIZEY_=$(blocksize) -D_BLOCKSIZEZ_=$(blocksize)
 CUBISMZFLAGS += -I../Compressor/Cubism/source/ -I../Compressor/source/
 
 CUBISMZFLAGS += -I$(hdf-incdir) -D_USE_HDF_
