Updated copyright message

--- a/Makefile.config
+++ b/Makefile.config
@@ -1,3 +1,11 @@
+# Makefile.config
+# CubismZ
+#
+# Copyright 2018 ETH Zurich. All rights reserved.
+#
+# This source code is licensed under the BSD-style license found in the
+# LICENSE file in the root directory of this source tree.
+#
 SHELL := /bin/bash
 
 mpi_info = $(shell $(MPICXX) -show)
